# UAP

./: .pdm-python  README.md  pyproject.toml
src/: ResNet50UAP.ipynb  klasifikasi_citra.py  requirements.txt
