[project]
name = "UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["joblib>=1.4.2", "scikit-learn>=1.6.0", "streamlit>=1.41.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "streamlit run ./src/app.py"


